fix: sketch container overflow

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -43,7 +43,9 @@
     bottom: 0;
     right: 0;
     z-index: 1;
-    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
   }
 }
 
